--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
       cursor: pointer;
     }
     @media(min-width:600px){
+      body{
+        height:100vh;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        
+      }
       main{
         display: flex;
         flex-direction: row;
