--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       main{
         display: flex;
         flex-direction: row;
-        margin-top: 100px;
+        margin:0;
         max-width: 600px;
         
         
